[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/ui/menufont.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/ui/submenufont.tres" type="DynamicFont" id=2]
[ext_resource path="res://scripts/ctrls.gd" type="Script" id=3]

[node name="ctrls" type="VBoxContainer"]
margin_left = 124.0
margin_top = 27.0
margin_right = 444.0
margin_bottom = 440.0
rect_min_size = Vector2( 320, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 11
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sep_top" type="CenterContainer" parent="."]
margin_right = 320.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="mv_f" type="HBoxContainer" parent="."]
margin_top = 11.0
margin_right = 320.0
margin_bottom = 38.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="NAME" type="Label" parent="mv_f"]
margin_right = 158.0
margin_bottom = 27.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )
text = "Move Up"
valign = 1

[node name="btn" type="Button" parent="mv_f"]
margin_left = 162.0
margin_right = 320.0
margin_bottom = 27.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0.764706, 0.764706, 0.764706, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 2 )
flat = true
align = 2

[node name="mv_b" type="HBoxContainer" parent="."]
margin_top = 49.0
margin_right = 320.0
margin_bottom = 76.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="NAME" type="Label" parent="mv_b"]
margin_right = 158.0
margin_bottom = 27.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )
text = "Move Down"
valign = 1

[node name="btn" type="Button" parent="mv_b"]
margin_left = 162.0
margin_right = 320.0
margin_bottom = 27.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0.764706, 0.764706, 0.764706, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 2 )
flat = true
align = 2

[node name="mv_l" type="HBoxContainer" parent="."]
margin_top = 87.0
margin_right = 320.0
margin_bottom = 114.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="NAME" type="Label" parent="mv_l"]
margin_right = 158.0
margin_bottom = 27.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )
text = "Move Left"
valign = 1

[node name="btn" type="Button" parent="mv_l"]
margin_left = 162.0
margin_right = 320.0
margin_bottom = 27.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0.764706, 0.764706, 0.764706, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 2 )
flat = true
align = 2

[node name="mv_r" type="HBoxContainer" parent="."]
margin_top = 125.0
margin_right = 320.0
margin_bottom = 152.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="NAME" type="Label" parent="mv_r"]
margin_right = 158.0
margin_bottom = 27.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )
text = "Move Right"
valign = 1

[node name="btn" type="Button" parent="mv_r"]
margin_left = 162.0
margin_right = 320.0
margin_bottom = 27.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0.764706, 0.764706, 0.764706, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 2 )
flat = true
align = 2

[node name="arm_l" type="HBoxContainer" parent="."]
margin_top = 163.0
margin_right = 320.0
margin_bottom = 190.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="NAME" type="Label" parent="arm_l"]
margin_right = 158.0
margin_bottom = 27.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )
text = "Arm Left"
valign = 1

[node name="btn" type="Button" parent="arm_l"]
margin_left = 162.0
margin_right = 320.0
margin_bottom = 27.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0.764706, 0.764706, 0.764706, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 2 )
flat = true
align = 2

[node name="arm_r" type="HBoxContainer" parent="."]
margin_top = 201.0
margin_right = 320.0
margin_bottom = 228.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="NAME" type="Label" parent="arm_r"]
margin_right = 158.0
margin_bottom = 27.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )
text = "Arm Right"
valign = 1

[node name="btn" type="Button" parent="arm_r"]
margin_left = 162.0
margin_right = 320.0
margin_bottom = 27.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0.764706, 0.764706, 0.764706, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 2 )
flat = true
align = 2

[node name="head" type="HBoxContainer" parent="."]
margin_top = 239.0
margin_right = 320.0
margin_bottom = 266.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="NAME" type="Label" parent="head"]
margin_right = 158.0
margin_bottom = 27.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )
text = "Head"
valign = 1

[node name="btn" type="Button" parent="head"]
margin_left = 162.0
margin_right = 320.0
margin_bottom = 27.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0.764706, 0.764706, 0.764706, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 2 )
flat = true
align = 2

[node name="feet" type="HBoxContainer" parent="."]
margin_top = 277.0
margin_right = 320.0
margin_bottom = 304.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="NAME" type="Label" parent="feet"]
margin_right = 158.0
margin_bottom = 27.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )
text = "Feet"
valign = 1

[node name="btn" type="Button" parent="feet"]
margin_left = 162.0
margin_right = 320.0
margin_bottom = 27.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0.764706, 0.764706, 0.764706, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 2 )
flat = true
align = 2

[node name="cast" type="HBoxContainer" parent="."]
margin_top = 315.0
margin_right = 320.0
margin_bottom = 342.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="NAME" type="Label" parent="cast"]
margin_right = 158.0
margin_bottom = 27.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )
text = "Cast"
valign = 1

[node name="btn" type="Button" parent="cast"]
margin_left = 162.0
margin_right = 320.0
margin_bottom = 27.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0.764706, 0.764706, 0.764706, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 2 )
flat = true
align = 2

[node name="act" type="HBoxContainer" parent="."]
margin_top = 353.0
margin_right = 320.0
margin_bottom = 380.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="NAME" type="Label" parent="act"]
margin_right = 158.0
margin_bottom = 27.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )
text = "Action"
valign = 1

[node name="btn" type="Button" parent="act"]
margin_left = 162.0
margin_right = 320.0
margin_bottom = 27.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0.764706, 0.764706, 0.764706, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 2 )
flat = true
align = 2

[node name="sep_bot" type="CenterContainer" parent="."]
margin_top = 391.0
margin_right = 320.0
margin_bottom = 391.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="back" type="Button" parent="."]
margin_top = 402.0
margin_right = 320.0
margin_bottom = 435.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0.764706, 0.764706, 0.764706, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Back"
flat = true
align = 2
